add: object page and browser app (partial)
